--- a/index.html
+++ b/index.html
@@ -343,137 +343,115 @@
           </div>
         </div>
 
-        <!-- <div class="container-fluid" data-aos="fade-up">
+        <div class="container-fluid" data-aos="fade-up">
           <div class="gallery-slider swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <a
-                  href="assets/img/gallery/gallery-1.png"
+                  href="assets/img/gallery/gallery-1.svg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
                   ><img
-                    src="assets/img/gallery/gallery-1.png"
+                    src="assets/img/gallery/gallery-1.svg"
                     class="img-fluid"
                     alt=""
                 /></a>
               </div>
               <div class="swiper-slide">
                 <a
-                  href="assets/img/gallery/gallery-2.png"
+                  href="assets/img/gallery/gallery-2.svg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
                   ><img
-                    src="assets/img/gallery/gallery-2.png"
+                    src="assets/img/gallery/gallery-2.svg"
                     class="img-fluid"
                     alt=""
                 /></a>
               </div>
               <div class="swiper-slide">
                 <a
-                  href="assets/img/gallery/gallery-3.png"
+                  href="assets/img/gallery/gallery-3.svg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
                   ><img
-                    src="assets/img/gallery/gallery-3.png"
+                    src="assets/img/gallery/gallery-3.svg"
                     class="img-fluid"
                     alt=""
                 /></a>
               </div>
               <div class="swiper-slide">
                 <a
-                  href="assets/img/gallery/gallery-4.png"
+                  href="assets/img/gallery/gallery-4.svg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
                   ><img
-                    src="assets/img/gallery/gallery-4.png"
+                    src="assets/img/gallery/gallery-4.svg"
                     class="img-fluid"
                     alt=""
                 /></a>
               </div>
               <div class="swiper-slide">
                 <a
-                  href="assets/img/gallery/gallery-5.png"
+                  href="assets/img/gallery/gallery-5.svg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
                   ><img
-                    src="assets/img/gallery/gallery-5.png"
+                    src="assets/img/gallery/gallery-5.svg"
                     class="img-fluid"
                     alt=""
                 /></a>
               </div>
               <div class="swiper-slide">
                 <a
-                  href="assets/img/gallery/gallery-6.png"
+                  href="assets/img/gallery/gallery-6.svg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
                   ><img
-                    src="assets/img/gallery/gallery-6.png"
+                    src="assets/img/gallery/gallery-6.svg"
                     class="img-fluid"
                     alt=""
                 /></a>
               </div>
               <div class="swiper-slide">
                 <a
-                  href="assets/img/gallery/gallery-7.png"
+                  href="assets/img/gallery/gallery-7.svg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
                   ><img
-                    src="assets/img/gallery/gallery-7.png"
+                    src="assets/img/gallery/gallery-7.svg"
                     class="img-fluid"
                     alt=""
                 /></a>
               </div>
               <div class="swiper-slide">
                 <a
-                  href="assets/img/gallery/gallery-8.png"
+                  href="assets/img/gallery/gallery-8.svg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
                   ><img
-                    src="assets/img/gallery/gallery-8.png"
+                    src="assets/img/gallery/gallery-8.svg"
                     class="img-fluid"
                     alt=""
                 /></a>
               </div>
               <div class="swiper-slide">
                 <a
-                  href="assets/img/gallery/gallery-9.png"
+                  href="assets/img/gallery/gallery-9.svg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
                   ><img
-                    src="assets/img/gallery/gallery-9.png"
+                    src="assets/img/gallery/gallery-9.svg"
                     class="img-fluid"
                     alt=""
                 /></a>
               </div>
               <div class="swiper-slide">
                 <a
-                  href="assets/img/gallery/gallery-10.png"
+                  href="assets/img/gallery/gallery-10.svg"
                   class="gallery-lightbox"
                   data-gall="gallery-carousel"
                   ><img
-                    src="assets/img/gallery/gallery-10.png"
-                    class="img-fluid"
-                    alt=""
-                /></a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  href="assets/img/gallery/gallery-11.png"
-                  class="gallery-lightbox"
-                  data-gall="gallery-carousel"
-                  ><img
-                    src="assets/img/gallery/gallery-11.png"
-                    class="img-fluid"
-                    alt=""
-                /></a>
-              </div>
-              <div class="swiper-slide">
-                <a
-                  href="assets/img/gallery/gallery-12.png"
-                  class="gallery-lightbox"
-                  data-gall="gallery-carousel"
-                  ><img
-                    src="assets/img/gallery/gallery-12.png"
+                    src="assets/img/gallery/gallery-10.svg"
                     class="img-fluid"
                     alt=""
                 /></a>
@@ -481,7 +459,7 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
-        </div> -->
+        </div>
       </section>
       <!-- End Gallery Section -->
     </main>
