--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
       </div>
     </section>
     <!-- End Hero -->
-
     <main id="main">
       <!-- ======= App Features Section ======= -->
       <section id="features" class="features">
@@ -191,30 +190,22 @@
               <img src="assets/img/details-1.png" class="img-fluid" alt="" />
             </div>
             <div class="col-md-8 pt-4" data-aos="fade-up">
-              <h3>
-                Voluptatem dignissimos provident quasi corporis voluptates sit
-                assumenda.
-              </h3>
+              <h3>Let's Make Phone Calls Easier</h3>
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                You can talk to your friends and family for free*, even if they
+                are in another country, via voice calls.
               </p>
               <ul>
                 <li>
-                  <i class="bi bi-check"></i> Ullamco laboris nisi ut aliquip ex
-                  ea commodo consequat.
+                  <i class="bi bi-check"></i> Wecon audio and video calls use
+                  your phone's Internet connection rather than your mobile
+                  plan's voice minutes, so you won't be charged for unnecessary
+                  calls.
                 </li>
                 <li>
-                  <i class="bi bi-check"></i> Duis aute irure dolor in
-                  reprehenderit in voluptate velit.
-                </li>
-                <li>
-                  <i class="bi bi-check"></i> Iure at voluptas aspernatur
-                  dignissimos doloribus repudiandae.
-                </li>
-                <li>
-                  <i class="bi bi-check"></i> Est ipsa assumenda id facilis
-                  nesciunt placeat sed doloribus praesentium.
+                  <i class="bi bi-check"></i> The call quality is extremely good
+                  and wecon ensure the 0% call drop and buffering chance during
+                  your essential conversation.
                 </li>
               </ul>
               <p>
@@ -230,102 +221,43 @@
               <img src="assets/img/details-2.png" class="img-fluid" alt="" />
             </div>
             <div class="col-md-8 pt-5 order-2 order-md-1" data-aos="fade-up">
-              <h3>Corporis temporibus maiores provident</h3>
+              <h3>Be Unique And Be You</h3>
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Wecon service is all about you and your friends,
               </p>
               <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum
-                dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum
-              </p>
-              <p>
-                Inventore id enim dolor dicta qui et magni molestiae. Mollitia
-                optio officia illum ut cupiditate eos autem. Soluta dolorum
-                repellendus repellat amet autem rerum illum in. Quibusdam
-                occaecati est nisi esse. Saepe aut dignissimos distinctio id
-                enim.
+                So here are a whole bunch of stickers for you that are unique
+                and expressive. So using a messenger for chitchat is not boring
+                anymore because wecon is there for you. You can also customize
+                your chat box interface. There is a large collection of themes
+                for your chatbox.
               </p>
             </div>
           </div>
-
           <div class="row content">
-            <div class="col-md-4" data-aos="fade-right">
-              <img src="assets/img/details-3.png" class="img-fluid" alt="" />
-            </div>
-            <div class="col-md-8 pt-5" data-aos="fade-up">
-              <h3>
-                Sunt consequatur ad ut est nulla consectetur reiciendis animi
-                voluptas
-              </h3>
-              <p>
-                Cupiditate placeat cupiditate placeat est ipsam culpa. Delectus
-                quia minima quod. Sunt saepe odit aut quia voluptatem hic
-                voluptas dolor doloremque.
-              </p>
-              <ul>
-                <li>
-                  <i class="bi bi-check"></i> Ullamco laboris nisi ut aliquip ex
-                  ea commodo consequat.
-                </li>
-                <li>
-                  <i class="bi bi-check"></i> Duis aute irure dolor in
-                  reprehenderit in voluptate velit.
-                </li>
-                <li>
-                  <i class="bi bi-check"></i> Facilis ut et voluptatem aperiam.
-                  Autem soluta ad fugiat.
-                </li>
-              </ul>
-              <p>
-                Qui consequatur temporibus. Enim et corporis sit sunt harum
-                praesentium suscipit ut voluptatem. Et nihil magni debitis
-                consequatur est.
-              </p>
-              <p>
-                Suscipit enim et. Ut optio esse quidem quam reiciendis esse odit
-                excepturi. Vel dolores rerum soluta explicabo vel fugiat eum
-                non.
-              </p>
-            </div>
-          </div>
-
-          <div class="row content">
-            <div class="col-md-4 order-1 order-md-2" data-aos="fade-left">
+            <div class="col-md-4 order-1 order-md-1" data-aos="fade-left">
               <img src="assets/img/details-4.png" class="img-fluid" alt="" />
             </div>
-            <div class="col-md-8 pt-5 order-2 order-md-1" data-aos="fade-up">
-              <h3>
-                Quas et necessitatibus eaque impedit ipsum animi consequatur
-                incidunt in
-              </h3>
+            <div class="col-md-8 pt-5 order-2 order-md-2" data-aos="fade-up">
+              <h3>Sharing Is Secure Now.</h3>
               <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Wecon allows you to send photographs and videos immediately.
+                With a built-in camera, you can even capture the moments that
+                matter most to you.
               </p>
               <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum
-                dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum
+                Even if you're on a sluggish connection, Wecon allows you to
+                exchange photographs and videos swiftly.
               </p>
               <ul>
                 <li>
-                  <i class="bi bi-check"></i> Et praesentium laboriosam
-                  architecto nam .
+                  <i class="bi bi-check"></i> without the fuss of email or
+                  file-sharing programs, send PDFs, docs, spreadsheets,
+                  slideshows, and more.
                 </li>
                 <li>
-                  <i class="bi bi-check"></i> Eius et voluptate. Enim earum
-                  tempore aliquid. Nobis et sunt consequatur. Aut repellat in
-                  numquam velit quo dignissimos et.
-                </li>
-                <li>
-                  <i class="bi bi-check"></i> Facilis ut et voluptatem aperiam.
-                  Autem soluta ad fugiat.
+                  <i class="bi bi-check"></i> You may email documents up to 100
+                  MB, making it simple to get what you need to the right people.
                 </li>
               </ul>
             </div>
@@ -500,10 +432,6 @@
 
             <div class="col-lg-4 col-md-6 footer-links">
               <h4>Our Social Networks</h4>
-              <p>
-                Cras fermentum odio eu feugiat lide par naso tierra videa magna
-                derita valies
-              </p>
               <div class="social-links mt-3">
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
