--- a/index.html
+++ b/index.html
@@ -112,10 +112,8 @@
           <div class="section-title">
             <h2>App Features</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              WeCon has many advantageous features over traditional media. These
+              features are derived from the social media technology.
             </p>
           </div>
 
