--- a/index.html
+++ b/index.html
@@ -35,13 +35,8 @@
     />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
 
-    <!-- Template Main CSS File -->
+    <!-- main css -->
     <link href="assets/css/style.css" rel="stylesheet" />
-
-    <!-- =======================================================
-  * Template Name: WeCon 
-  * Author: https://trustinfotech.net/
-  ======================================================== -->
   </head>
 
   <body>
@@ -49,9 +44,16 @@
     <header id="header" class="fixed-top header-transparent">
       <div class="container d-flex align-items-center justify-content-between">
         <div class="logo">
-          <h1><a href="index.html">WeCon</a></h1>
-          <!-- Uncomment below if you prefer to use an image logo -->
-          <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+          <h1>
+            <a href="index.html">
+              <img
+                src="assets/img/wecon-logo-1.png"
+                class="wecon-nav-logo"
+                alt=""
+              />WeCon</a
+            >
+          </h1>
+          <!-- <a href="index.html"><img src="assets/img/wecon logo.png" alt="" class="img-fluid"></a> -->
         </div>
 
         <nav id="navbar" class="navbar">
@@ -82,6 +84,11 @@
           >
             <div>
               <h1>WeCon</h1>
+
+              <!-- <div id="hero-slogan-logo">
+                <img src="assets/img/wecon logo.png" class="img-fluid" alt="" />
+              </div> -->
+
               <h2>
                 Wecon is more than just a messaging and social media app; it's a
                 way of life. You may chat and make calls with friends, share
@@ -97,8 +104,8 @@
           </div>
           <div
             class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img"
-            data-aos="fade-up"
           >
+            <!-- data-aos="fade-up" -->
             <img src="assets/img/hero-img.png" class="img-fluid" alt="" />
           </div>
         </div>
@@ -396,7 +403,8 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-4 col-md-6 footer-contact">
-              <h3>WeCon</h3>
+              <h3 class="text-success">WeCon</h3>
+              <!-- <img src="assets/img/wecon logo.png" alt="" /> -->
               <p>
                 Banani Old DOHS <br />
                 Dhaka<br />
@@ -426,7 +434,12 @@
             <div class="col-lg-4 col-md-6 footer-links">
               <h4>Our Social Networks</h4>
               <div class="social-links mt-3">
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a
+                  href="https://www.facebook.com/WECON-101478799266457"
+                  target="_blank"
+                  class="facebook"
+                  ><i class="bx bxl-facebook"></i
+                ></a>
                 <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               </div>
@@ -461,7 +474,6 @@
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
