--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a href="#">Privacy policy</a>
+                  <a href="privacy_policy.html">Privacy policy</a>
                 </li>
               </ul>
             </div>
