privacy policy page completed

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -78,20 +78,113 @@
         <div class="row">
           <h2 class="text-center mb-5">WeCon PRIVACY POLICY</h2>
           <p>
-            mus, sunt eligendi incidunt. Corrupti, quod reiciendis sequi
-            laboriosam quo assumenda impedit, officiis adipisci, animi minima
-            provident excepturi quisquam voluptatum nobis nesciunt obcaecati vel
-            culpa. Quod modi, at nam cupiditate, nostrum voluptate quas, est
-            commodi accusantium voluptatem placeat doloribus optio perspiciatis
-            id deserunt dicta unde ipsam doloremque laborum sed ex nobis itaque
-            a magnam. Tenetur a molestiae soluta molestias, ad modi quisquam
-            iste minus nesciunt sapiente repudiandae veniam placeat atque vel
-            facilis. Et impedit natus fugiat enim dicta assumenda non sint.
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum
-            accusantium laboriosam rem distinctio ratione blanditiis iusto
-            voluptatum impedit non possimus accusamus labore odio sunt natus
-            mollitia, asperiores eos nemo. Quisquam quia commodi doloremque.
-            Inventore molestias aliquid aliquam sapiente officiis totam.
+            We appreciate you using Wecon! We respect your privacy concerns and
+            value your trust and confidence in us. The following is a note of
+            the information in this privacy policy ("Privacy Policy"). This note
+            is provided to assist you in navigating the Privacy Policy; it is
+            not a substitute for reading the entire document! The following
+            hyperlinks will take you directly to specific sections of the
+            Privacy Policy.
+          </p>
+          <h5 class="mt-2 mb-3">ARE YOU COVERED BY THIS PRIVACY POLICY?</h5>
+          <p>
+            This Privacy Policy only applies to you if you are a Wecon user who
+            has registered by linking a mobile number that does utilize the +088
+            international calling code.
+          </p>
+          <h5 class="mt-2 mb-3">WECON REQUIRES WHAT INFORMATION FROM YOU?</h5>
+          <p>
+            We'll need your phone number and an alias when you sign up for a
+            Wecon account. You can add more information to your profile and
+            tweak it further. If you use specific WECON features (for example,
+            publishing images to your Moments), we will use your information to
+            deliver these features.
+          </p>
+          <h5 class="mt-2 mb-3">WHAT DO WE DO WITH YOUR DATA?</h5>
+          <p>
+            We use your information to deliver Wecon to you, so you may
+            communicate with other users, use the features available on WeChat,
+            and develop and maintain your WECON experience. If you are a parent
+            or guardian who has given your kid permission to use WECON, we will
+            keep the contact information you supplied so that we may verify any
+            requests or inquiries you may have about your child's Wecon account.
+          </p>
+          <h5 class="mt-2 mb-3">WITH WHOM DO WE SHARE YOUR INFORMATION?</h5>
+          <p>
+            We do not disclose your information with third parties unless we are
+            required to do so by a court, government, or legislation. We only
+            use these third-party services to process or store your data for the
+            purposes outlined in this Privacy Policy. Any third party with whom
+            we disclose user data is expected to protect user data to the same
+            extent as our Privacy Policy.
+          </p>
+          <h5 class="mt-2 mb-3">HOW LONG DO WE KEEP YOUR INFORMATION?</h5>
+          <p>
+            The length of time we keep information varies depending on the type
+            of information – for example, log-in data is kept for up to 90 days
+            after it is obtained. We do not keep your personal information for
+            any longer than is required by law.
+          </p>
+          <h5 class="mt-2 mb-3">
+            HOW CAN YOU EXERCISE YOUR DATA PROTECTION RIGHTS?
+          </h5>
+          <p>
+            You may have particular rights over your data and how we can use it
+            depending on where you reside. These options include how to access
+            your data, erase it, limit how your data is used, object to our
+            usage, and obtain a copy of your data.
+          </p>
+          <h5 class="mt-2 mb-3">SECURITY IS OUR FIRST CONCERN</h5>
+          <p>
+            Wecon was built from the ground up to help you stay in touch with
+            friends, communicate important information in the event of a natural
+            disaster, reunite with estranged family members, and find a better
+            life. We built end-to-end encryption into Wecon since it is used to
+            share some of your most personal moments. End-to-end encryption
+            prevents the interception of your messages, pictures, videos, voice
+            conversations, documents, and phone calls.
+          </p>
+          <h5 class="mt-2 mb-3">SAFE MASSAGE</h5>
+          <p>
+            When you use Wecon Messenger to send a message to another person,
+            end-to-end encryption is employed. End-to-end encryption means that
+            only you and the person with whom you're conversing can read or
+            listen to what's sent, with no one else, including Wecon, in the
+            middle. This is because your communications are locked with
+            end-to-end encryption, and only the recipient and you have the
+            specific key to unlock and read them. All of this happens
+            automatically, so there's no need to change any settings or create
+            specific hidden chats to keep your messages safe.
+          </p>
+          <h5 class="mt-2 mb-3">Messages for Business</h5>
+          <p>
+            Every Wecon message is protected by the same Signal encryption
+            protocol that secures messages before they leave your device. When
+            you message a Wecon business account, your message is delivered
+            securely to the destination chosen by the business.
+          </p>
+          <p>
+            Wecon considers chats with businesses that use the Wecon Business
+            app or manage and store customer messages themselves to be
+            end-to-end encrypted. Once the message is received, it will be
+            subject to the business’s own privacy practices. The business may
+            designate a number of employees, or even other vendors, to process
+            and respond to the message. You can always contact that business to
+            learn more about its privacy practices.
+          </p>
+          <h5 class="mt-2 mb-3">CONTROL IS ALL YOURS</h5>
+          <p>
+            Wecon wants to make sure you know what’s happening with your
+            messages. If you don’t want to receive messages from a person or
+            business, you can always block them directly from the chat or delete
+            them from your contact list. We want to make sure you understand how
+            your messages are being handled and have the options you need to
+            make the right decisions for you.
+          </p>
+          <h5 class="mt-2 mb-3">HOW WILL WE INFORM YOU OF MODIFICATIONS?</h5>
+          <p>
+            If this Privacy Policy changes significantly, we will update it here
+            and tell you before the change takes effect.
           </p>
         </div>
       </div>
