contact address updated

--- a/index.html
+++ b/index.html
@@ -406,8 +406,8 @@
               <h3 class="text-success">WeCon</h3>
               <!-- <img src="assets/img/wecon logo.png" alt="" /> -->
               <p>
-                Banani Old DOHS <br />
-                Dhaka<br />
+                Banani (Old DOHS) <br />
+                Dhaka, 1213<br />
                 Bangladesh <br /><br />
                 <strong>Phone:</strong> +880 0011223344<br />
                 <strong>Email:</strong> info@example.com<br />
