--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
               <a class="nav-link scrollto" href="#features">App Features</a>
             </li>
             <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
+            <li><a class="nav-link scrollto" href="about.html">About</a></li>
             <li>
               <a class="getstarted scrollto" href="#features">Get Started</a>
             </li>
