about section update

--- a/about.html
+++ b/about.html
@@ -79,13 +79,12 @@
           <div class="section-title">
             <h2>About Us</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
-              distinctio minima modi minus doloribus exercitationem iste,
-              accusantium placeat provident quis ullam cupiditate pariatur cum
-              ea ipsa. Suscipit ullam aperiam cum accusamus illo quam corrupti
-              eos harum provident dicta. Accusamus quae illum vel eum asperiores
-              placeat, repellendus quisquam numquam autem magni accusantium unde
-              quibusdam libero laborum optio animi necessitatibus.
+              Initially, Wecon served as an SMS substitute. Our solution can now
+              send and receive voice calls, as well as text, images, videos,
+              documents, and location data. Because you share some of your most
+              private moments with Wecon , we added end-to-end encryption to our
+              app. Every choice we make regarding a product is driven by our
+              ambition to remove obstacles to global communication.
             </p>
           </div>
           <div class="row content py-5">
@@ -99,18 +98,13 @@
             <div class="col-md-6 pt-4" data-aos="fade-up">
               <h3>Our Mission</h3>
               <p class="fst-italic">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Aliquid maxime, hic placeat dicta fuga eveniet rem iusto aut
-                error. Deserunt maxime sequi nam, pariatur explicabo nisi optio
-                placeat harum sit minima non? Harum neque saepe natus officia,
-                obcaecati possimus, quos dolor ipsam expedita rerum quia eos
-                excepturi laborum iusto corporis quasi iure voluptatum pariatur
-                et nulla itaque qui corrupti magni. Non hic provident nam magnam
-                ipsum ratione quasi, excepturi neque aperiam quod ex qui
-                sapiente doloribus consequuntur consequatur, laborum tempore
-                deserunt deleniti nisi, commodi fugit natus officia harum
-                pariatur? Nesciunt similique ullam quidem porro minima! Rem
-                commodi voluptates saepe esse.
+                Initially, Wecon served as an SMS substitute. Our solution can
+                now send and receive voice calls, as well as text, images,
+                videos, documents, and location data. Because you share some of
+                your most private moments with Wecon, we added end-to-end
+                encryption to our app. Every choice we make regarding a product
+                is driven by our ambition to remove obstacles to global
+                communication.
               </p>
             </div>
           </div>
@@ -118,18 +112,15 @@
             <div class="col-md-6 pt-4" data-aos="fade-up">
               <h3>Our Vision</h3>
               <p class="fst-italic">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Aliquid maxime, hic placeat dicta fuga eveniet rem iusto aut
-                error. Deserunt maxime sequi nam, pariatur explicabo nisi optio
-                placeat harum sit minima non? Harum neque saepe natus officia,
-                obcaecati possimus, quos dolor ipsam expedita rerum quia eos
-                excepturi laborum iusto corporis quasi iure voluptatum pariatur
-                et nulla itaque qui corrupti magni. Non hic provident nam magnam
-                ipsum ratione quasi, excepturi neque aperiam quod ex qui
-                sapiente doloribus consequuntur consequatur, laborum tempore
-                deserunt deleniti nisi, commodi fugit natus officia harum
-                pariatur? Nesciunt similique ullam quidem porro minima! Rem
-                commodi voluptates saepe esse.
+                Initially, Wecon served as an SMS substitute. Our solution can
+                now send and receive voice calls, as well as text, images,
+                videos, documents, and location data. Because you share some of
+                your most private moments with Wecon, we added end-to-end
+                encryption to our app. Every choice we make regarding a product
+                is driven by our ambition to remove obstacles to global
+                communication. On the other hand we are working on a wallet
+                system that's more reliable and easy to use. our vision is to
+                make a cashless Bangladesh.
               </p>
             </div>
             <div class="col-md-6" data-aos="fade-right">
